feat: Enhance recipe generation and user experience
Introduces several improvements to the Mr. Chef AI Assistant:

- **Constants Update:** Refreshes mock data for recipes with more diverse and realistic images. Updates initial user settings with a default name, profile picture, and cuisine preference.
- **Gemini Service Enhancement:**
    - Renames `API_KEY` to `GEMINI_API_KEY` for clarity.
    - Initializes `GoogleGenAI` within the function for better scoped initialization.
    - Adds support for specifying a `recipeName` when generating recipes.
    - Implements a new `translateRecipe` function to translate recipes to a target language using the Gemini API.
- **Speech Recognition Hook:**
    - Adds `continuous` listening and `lang` options to `useSpeechRecognition`.
    - Introduces `isWakeupWordDetected` and related internal refs for more sophisticated voice command handling.
    - Prevents multiple instances of recognition from starting.
- **Home View Update:**
    - Includes user settings (name, profile picture) in the Home view for personalized greetings.
    - Displays the user's profile picture with an interactive, animated effect.
- **Recipe Detail View:**
    - Integrates the `useSpeechRecognition` hook with `continuous` listening and language selection.
    - Initializes `lang` state for language selection in speech recognition.
    - Enables the use of speech recognition for controlling the video player and navigating through recipe steps.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         backdrop-filter: blur(10px);
         border: 1px solid rgba(255, 255, 255, 0.5);
       }
+      @keyframes bounce-subtle {
+        0%, 100% { transform: translateY(0); }
+        50% { transform: translateY(-3px); }
+      }
+      .animate-bounce-subtle {
+        animation: bounce-subtle 2s infinite ease-in-out;
+      }
     </style>
   <script type="importmap">
 {
